--- a/waterchat/appsettings.json
+++ b/waterchat/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-waterchat-8b56506e-fcdb-44b1-a850-49b35643890f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DataAccessPostgreSqlProvider": "User ID=postgres;Password=waterchat;Host=postgresserver;Port=5432;Database=waterchat;Pooling=true;"
   },
   "Logging": {
     "IncludeScopes": false,
