--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,54 @@
 version: '3'
+
 services:
+  tyk_redis:
+    image: redis:latest
+    hostname: redis
+    ports:
+      - "6379:6379"
+    networks:
+      gateway:
+        aliases:
+          - redis
+  tyk_mongo:
+    image: mongo:latest
+    command: ["mongod", "--smallfiles"]
+    hostname: mongo
+    ports:
+      - "27017:27017"
+    networks:
+      gateway:
+        aliases:
+          - mongo
+  tyk_dashboard:
+    image: tykio/tyk-dashboard:latest
+    ports:
+      - "3000:3000"
+      - "5000:5000"
+    volumes:
+      - /home/cap3/tyk/tyk_analytics.conf:/opt/tyk-dashboard/tyk_analytics.conf
+    networks:
+      - gateway
+  tyk_pump:
+    image: tykio/tyk-pump-docker-pub:latest
+    networks:
+      - gateway
+    volumes:
+      - /home/cap3/tyk/pump.conf:/opt/tyk-pump/pump.conf
+  tyk_gateway:
+    image: tykio/tyk-gateway:latest
+    ports:
+      - "80:8080"
+      - "8080:8080"
+    volumes:
+      - /home/cap3/tyk/tyk.conf:/opt/tyk-gateway/tyk.conf
+    networks:
+      - gateway
+    deploy:
+      replicas: 1
+      placement:
+        constraints: [node.role == manager]
+      
   eventstore:
     image: eventstore/eventstore
     ports:
@@ -7,28 +56,19 @@ services:
       - 1113:1113
     volumes:
       - /home/cap3/eventstore/data:/var/lib/eventstore
+    networks:
+      - gateway
   micro-auth:
     image: waterchat/micro-auth
     ports:
-      - 3000:3000
+      - 3030:3000
     links:
       - eventstore
     depends_on:
       - eventstore
-  gateway:
-    image: waterchat/gateway
-    build:
-      context: ./
-      dockerfile: Dockerfile.gateway
-    ports:
-      - 2015:2015
-      - 80:80
-      - 443:443
-    depends_on:
-      - micro-auth
-    links:
-      - micro-auth:auth
-    deploy:
-      replicas: 1
-      placement:
-        constraints: [node.role == manager]
+    networks:
+      - gateway
+
+networks:
+    gateway:
+
