tyk should be persistent

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     hostname: redis
     ports:
       - "6379:6379"
+    volumes:
+      - /home/cap3/tyk/redis/data:/data
     networks:
       gateway:
         aliases:
@@ -16,6 +18,8 @@ services:
     hostname: mongo
     ports:
       - "27017:27017"
+    volumes:
+      - /home/cap3/tyk/mongo/data/db:/data/db
     networks:
       gateway:
         aliases:
@@ -39,6 +43,7 @@ services:
     image: tykio/tyk-gateway:latest
     ports:
       - "80:8080"
+      - "443:8080"
       - "8080:8080"
     volumes:
       - /home/cap3/tyk/tyk.conf:/opt/tyk-gateway/tyk.conf
@@ -48,7 +53,6 @@ services:
       replicas: 1
       placement:
         constraints: [node.role == manager]
-      
   eventstore:
     image: eventstore/eventstore
     ports:
