added kong dashboard

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - /home/cap3/kong/cassandra:/var/lib/cassandra
     ports:
       - "9042:9042"
+    networks:
+      - waterchat
   kong:
     image: kong:0.10
     environment:
@@ -19,6 +21,14 @@ services:
       - "8001:8001"
       - "7946:7946"
       - "7946:7946/udp"
+    networks:
+      - waterchat
+  kong-dashboard:
+    image: pgbi/kong-dashboard:v2
+    ports:
+      - "8080:8080"
+    networks:
+      - waterchat
   eventstore:
     image: eventstore/eventstore
     ports:
@@ -27,7 +37,7 @@ services:
     volumes:
       - /home/cap3/eventstore/data:/var/lib/eventstore
     networks:
-      - gateway
+      - waterchat
   micro-auth:
     image: waterchat/micro-auth
     ports:
@@ -35,8 +45,8 @@ services:
     depends_on:
       - eventstore
     networks:
-      - gateway
+      - waterchat
 
 networks:
-    gateway:
+    waterchat:
 
