--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,10 @@ services:
     image: waterchat/micro-auth
     ports:
       - "3030:3000"
+    environment:
+      - GITHUB_CALLBACK
+      - GITHUB_ID
+      - GITHUB_SECRET
     depends_on:
       - eventstore
     networks:
