--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,5 +38,8 @@ services:
     image: waterchat/micro-auth:latest
     ports:
       - "3030:3000"
+    dns:
+      - 8.8.8.8
+      - 9.9.9.9
     depends_on:
       - eventstore
